[gd_scene load_steps=11 format=3 uid="uid://d36wkp6fhq861"]

[ext_resource type="Script" path="res://stats.gd" id="1_mw1fk"]
[ext_resource type="Texture2D" uid="uid://d2ppgspwkh273" path="res://Art/Home.png" id="3_amhnf"]
[ext_resource type="Texture2D" uid="uid://cju81qnl0qush" path="res://Art/PurpleStatsRect.png" id="4_8y43f"]
[ext_resource type="Texture2D" uid="uid://dh0yjmh51sc54" path="res://Art/LeftArrow.png" id="4_k1l53"]
[ext_resource type="Texture2D" uid="uid://xo6vbqxxr3gm" path="res://Art/RightArrow.png" id="5_ctv0k"]
[ext_resource type="Texture2D" uid="uid://rtv54feqxjdh" path="res://Art/ConfirmButton.png" id="6_hjfsh"]
[ext_resource type="Texture2D" uid="uid://bjqy3u7qhhwd7" path="res://Art/Hint.png" id="7_ctyds"]
[ext_resource type="Texture2D" uid="uid://c13pktdjbjlsj" path="res://Art/PopUp.png" id="7_pwycl"]
[ext_resource type="Texture2D" uid="uid://bsmsapjseqrnn" path="res://Art/PopUpButton.png" id="8_4b3tb"]
[ext_resource type="Texture2D" uid="uid://du803mfo0rh3d" path="res://Art/CloseButton.png" id="10_fydpx"]

[node name="Stats" type="Node2D"]
script = ExtResource("1_mw1fk")

[node name="C1" type="ScrollContainer" parent="."]
offset_top = 64.0
offset_right = 488.0
offset_bottom = 904.0
horizontal_scroll_mode = 0

[node name="C2" type="VBoxContainer" parent="C1"]
custom_minimum_size = Vector2(480, 656)
layout_mode = 2

[node name="C3" type="Area2D" parent="C1/C2"]

[node name="TotalGames" type="Area2D" parent="C1/C2/C3"]

[node name="Rect" type="NinePatchRect" parent="C1/C2/C3/TotalGames"]
offset_left = 8.0
offset_top = 8.0
offset_right = 464.0
offset_bottom = 308.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_8y43f")
region_rect = Rect2(0, 0, 566, 362)
patch_margin_left = 66
patch_margin_top = 69
patch_margin_right = 63
patch_margin_bottom = 69

[node name="Field" type="Label" parent="C1/C2/C3/TotalGames"]
offset_left = 22.0
offset_top = 14.0
offset_right = 176.0
offset_bottom = 52.0
theme_override_font_sizes/font_size = 25
text = "Total games:"

[node name="Val" type="Label" parent="C1/C2/C3/TotalGames"]
offset_left = 8.0
offset_top = 25.0
offset_right = 236.0
offset_bottom = 165.0
theme_override_font_sizes/font_size = 70
text = "-"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3

[node name="TotalPoints" type="Area2D" parent="C1/C2/C3"]

[node name="Rect" type="NinePatchRect" parent="C1/C2/C3/TotalPoints"]
offset_left = 244.0
offset_top = 8.0
offset_right = 700.0
offset_bottom = 308.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_8y43f")
region_rect = Rect2(0, 0, 566, 362)
patch_margin_left = 64
patch_margin_top = 70
patch_margin_right = 77
patch_margin_bottom = 82

[node name="Field" type="Label" parent="C1/C2/C3/TotalPoints"]
offset_left = 258.0
offset_top = 14.0
offset_right = 409.0
offset_bottom = 52.0
theme_override_font_sizes/font_size = 25
text = "Total points:"

[node name="Val" type="Label" parent="C1/C2/C3/TotalPoints"]
offset_left = 244.0
offset_top = 25.0
offset_right = 472.0
offset_bottom = 165.0
theme_override_font_sizes/font_size = 70
text = "-"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3

[node name="MostPoints" type="Area2D" parent="C1/C2/C3"]
position = Vector2(0, 158)

[node name="Rect" type="NinePatchRect" parent="C1/C2/C3/MostPoints"]
offset_left = 8.0
offset_top = 8.0
offset_right = 464.0
offset_bottom = 308.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_8y43f")
region_rect = Rect2(0, 0, 566, 362)
patch_margin_left = 75
patch_margin_top = 70
patch_margin_right = 97
patch_margin_bottom = 91

[node name="Field" type="Label" parent="C1/C2/C3/MostPoints"]
offset_left = 22.0
offset_top = 14.0
offset_right = 176.0
offset_bottom = 52.0
theme_override_font_sizes/font_size = 25
text = "Most points:"

[node name="Name" type="Label" parent="C1/C2/C3/MostPoints"]
offset_left = 8.0
offset_top = 36.0
offset_right = 236.0
offset_bottom = 108.0
theme_override_font_sizes/font_size = 45
text = "-"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3

[node name="Val" type="Label" parent="C1/C2/C3/MostPoints"]
offset_left = 8.0
offset_top = 86.0
offset_right = 236.0
offset_bottom = 158.0
theme_override_font_sizes/font_size = 45
text = "-"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3

[node name="PointsPerGame" type="Area2D" parent="C1/C2/C3"]
position = Vector2(236, 158)

[node name="Rect" type="NinePatchRect" parent="C1/C2/C3/PointsPerGame"]
offset_left = 8.0
offset_top = 8.0
offset_right = 464.0
offset_bottom = 308.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_8y43f")
region_rect = Rect2(0, 0, 566, 362)
patch_margin_left = 92
patch_margin_top = 67
patch_margin_right = 82
patch_margin_bottom = 92

[node name="Field" type="Label" parent="C1/C2/C3/PointsPerGame"]
offset_left = 22.0
offset_top = 14.0
offset_right = 176.0
offset_bottom = 52.0
theme_override_font_sizes/font_size = 25
text = "Most pts/game:"

[node name="Name" type="Label" parent="C1/C2/C3/PointsPerGame"]
offset_left = 8.0
offset_top = 36.0
offset_right = 236.0
offset_bottom = 108.0
theme_override_font_sizes/font_size = 45
text = "-"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3

[node name="Val" type="Label" parent="C1/C2/C3/PointsPerGame"]
offset_left = 8.0
offset_top = 86.0
offset_right = 236.0
offset_bottom = 158.0
theme_override_font_sizes/font_size = 45
text = "-"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3

[node name="MostWins" type="Area2D" parent="C1/C2/C3"]
position = Vector2(0, 316)

[node name="Rect" type="NinePatchRect" parent="C1/C2/C3/MostWins"]
offset_left = 8.0
offset_top = 8.0
offset_right = 464.0
offset_bottom = 308.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_8y43f")
region_rect = Rect2(0, 0, 566, 362)
patch_margin_left = 74
patch_margin_top = 92
patch_margin_right = 93
patch_margin_bottom = 67

[node name="Field" type="Label" parent="C1/C2/C3/MostWins"]
offset_left = 22.0
offset_top = 14.0
offset_right = 176.0
offset_bottom = 52.0
theme_override_font_sizes/font_size = 25
text = "Most wins:"

[node name="Name" type="Label" parent="C1/C2/C3/MostWins"]
offset_left = 8.0
offset_top = 36.0
offset_right = 236.0
offset_bottom = 108.0
theme_override_font_sizes/font_size = 45
text = "-"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3

[node name="Val" type="Label" parent="C1/C2/C3/MostWins"]
offset_left = 8.0
offset_top = 86.0
offset_right = 236.0
offset_bottom = 158.0
theme_override_font_sizes/font_size = 45
text = "-"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3

[node name="WinPercent" type="Area2D" parent="C1/C2/C3"]
position = Vector2(236, 316)

[node name="Rect" type="NinePatchRect" parent="C1/C2/C3/WinPercent"]
offset_left = 8.0
offset_top = 8.0
offset_right = 464.0
offset_bottom = 308.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_8y43f")
region_rect = Rect2(0, 0, 566, 362)
patch_margin_left = 83
patch_margin_top = 82
patch_margin_right = 83
patch_margin_bottom = 89

[node name="Field" type="Label" parent="C1/C2/C3/WinPercent"]
offset_left = 22.0
offset_top = 14.0
offset_right = 200.0
offset_bottom = 52.0
theme_override_font_sizes/font_size = 25
text = "Highest win %:"

[node name="Name" type="Label" parent="C1/C2/C3/WinPercent"]
offset_left = 8.0
offset_top = 36.0
offset_right = 236.0
offset_bottom = 108.0
theme_override_font_sizes/font_size = 45
text = "-"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3

[node name="Val" type="Label" parent="C1/C2/C3/WinPercent"]
offset_left = 8.0
offset_top = 86.0
offset_right = 236.0
offset_bottom = 158.0
theme_override_font_sizes/font_size = 45
text = "-"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3

[node name="Delete" type="Area2D" parent="C1/C2/C3"]
position = Vector2(0, -200)

[node name="DeleteButton" type="TextureButton" parent="C1/C2/C3/Delete"]
modulate = Color(0.752941, 0.588235, 0.768627, 1)
offset_left = 126.675
offset_right = 1637.68
offset_bottom = 223.0
scale = Vector2(0.15, 0.15)
texture_normal = ExtResource("6_hjfsh")

[node name="Label" type="Label" parent="C1/C2/C3/Delete"]
offset_left = 127.0
offset_right = 353.0
offset_bottom = 33.0
text = "Delete this group"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Home" type="TextureButton" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 378.0
offset_bottom = 379.0
scale = Vector2(0.15, 0.15)
texture_normal = ExtResource("3_amhnf")
metadata/_edit_use_anchors_ = true

[node name="Title" type="Label" parent="."]
offset_left = 75.0
offset_right = 405.0
offset_bottom = 75.0
theme_override_font_sizes/font_size = 25
text = "All-time stats"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3

[node name="LeftButton" type="TextureButton" parent="."]
offset_left = 405.0
offset_top = 16.0
offset_right = 429.0
offset_bottom = 55.0
scale = Vector2(0.99, 0.99)
texture_normal = ExtResource("4_k1l53")
ignore_texture_size = true
stretch_mode = 0

[node name="RightButton" type="TextureButton" parent="."]
offset_left = 445.24
offset_top = 16.0
offset_right = 469.24
offset_bottom = 55.0
scale = Vector2(0.99, 0.99)
texture_normal = ExtResource("5_ctv0k")
ignore_texture_size = true
stretch_mode = 0

[node name="Hint" type="TextureButton" parent="."]
visible = false
offset_left = 425.0
offset_top = 11.0
offset_right = 667.0
offset_bottom = 300.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("7_ctyds")

[node name="Popup" type="Area2D" parent="."]
visible = false

[node name="NinePatchRect" type="NinePatchRect" parent="Popup"]
offset_left = 45.0
offset_top = 311.0
offset_right = 695.0
offset_bottom = 744.0
scale = Vector2(0.6, 0.6)
texture = ExtResource("7_pwycl")
region_rect = Rect2(0, 0, 1324, 1089)
patch_margin_left = 67
patch_margin_top = 88
patch_margin_right = 85
patch_margin_bottom = 101

[node name="InfoLabel" type="Label" parent="Popup"]
offset_left = 60.0
offset_top = 311.0
offset_right = 420.0
offset_bottom = 485.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Are you sure you want to delete this group? Lost data cannot be recovered"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="CancelLabel" type="Label" parent="Popup"]
offset_left = 58.0
offset_top = 485.0
offset_right = 224.0
offset_bottom = 552.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Cancel"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ConfirmLabel" type="Label" parent="Popup"]
offset_left = 256.0
offset_top = 485.0
offset_right = 422.0
offset_bottom = 552.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Confirm"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="CancelButton" type="TextureButton" parent="Popup"]
offset_left = 58.0
offset_top = 485.0
offset_right = 889.0
offset_bottom = 820.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("8_4b3tb")
stretch_mode = 0

[node name="ConfirmButton" type="TextureButton" parent="Popup"]
offset_left = 255.8
offset_top = 485.0
offset_right = 1086.8
offset_bottom = 820.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("8_4b3tb")
stretch_mode = 0

[node name="TooltipPopup" type="Area2D" parent="."]
visible = false

[node name="NinePatchRect" type="NinePatchRect" parent="TooltipPopup"]
offset_left = 45.0
offset_top = 258.0
offset_right = 695.0
offset_bottom = 907.0
scale = Vector2(0.6, 0.6)
texture = ExtResource("7_pwycl")
region_rect = Rect2(0, 0, 1324, 1089)
patch_margin_left = 67
patch_margin_top = 88
patch_margin_right = 85
patch_margin_bottom = 101

[node name="InfoLabel" type="Label" parent="TooltipPopup"]
offset_left = 62.5
offset_top = 258.0
offset_right = 417.5
offset_bottom = 561.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "You can store stats for a specific group of players seperately by clicking the 'star' button while inputting the scores. All future games with the same group will then be stored automatically. You can also delete a group at the bottom of the page, or reset all your stats in settings."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="CloseLabel" type="Label" parent="TooltipPopup"]
offset_left = 58.0
offset_top = 561.0
offset_right = 419.0
offset_bottom = 628.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 21
text = "Close"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="CloseButton" type="TextureButton" parent="TooltipPopup"]
offset_left = 58.0
offset_top = 561.0
offset_right = 1865.0
offset_bottom = 896.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("10_fydpx")
stretch_mode = 0

[connection signal="pressed" from="C1/C2/C3/Delete/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="pressed" from="LeftButton" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="RightButton" to="." method="_on_right_button_pressed"]
[connection signal="pressed" from="Hint" to="." method="_on_hint_pressed"]
[connection signal="pressed" from="Popup/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="Popup/ConfirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="pressed" from="TooltipPopup/CloseButton" to="." method="_on_close_button_pressed"]
